Add button animation

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -105,17 +105,17 @@
 
       <p class="is-footer-element">
         This website is licensed under a
-        <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY NC ND 4.0 International License</a>.
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" class="button-animated-min">CC BY NC ND 4.0 International License</a>.
       </p>
 
-
       <p class="is-footer-element">
-        <a class="link" href="https://github.com/itsandreramon" style="padding-right: 1rem;" target="_blank">
+        <a class="link button-animated-min" href="https://github.com/itsandreramon" style="padding-right: 1rem;" target="_blank">
           <span class="icon is-small">
             <i class="fab fa-github"></i>
           </span>
         </a>
-        <a class="link" href="https://twitter.com/itsandreramon" target="_blank">
+
+        <a class="link button-animated-min" href="https://twitter.com/itsandreramon" target="_blank">
           <span class="icon is-small">
             <i class="fab fa-twitter"></i>
           </span>
