Add footer button animation

--- a/src/html/work.html
+++ b/src/html/work.html
@@ -93,7 +93,7 @@
               <div class="card-content">
                 <div class="media">
                   <div class="media-content">
-                    <a class="title is-4"  href="work.html">Web</a>
+                    <a class="title is-4" href="work.html">Web</a>
                   </div>
                 </div>
                 <div class="content">
@@ -151,36 +151,38 @@
             </div>
           </div>
 
-        </div> <!-- End Columns -->
-      </div> <!-- End Container -->
-    </section>
+        </div>
+        <!-- End Columns -->
+      </div>
+      <!-- End Container -->
+  </section>
 
   <!-- Footer -->
   <footer class="footer">
-      <div class="content has-text-centered has-text-grey-light">
-  
-        <p class="is-footer-element">
-          This website is licensed under a
-          <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY NC ND 4.0 International License</a>.
-        </p>
-  
-  
-        <p class="is-footer-element">
-          <a class="link" href="https://github.com/itsandreramon" style="padding-right: 1rem;" target="_blank">
-            <span class="icon is-small">
-              <i class="fab fa-github"></i>
-            </span>
-          </a>
-          <a class="link" href="https://twitter.com/itsandreramon" target="_blank">
-            <span class="icon is-small">
-              <i class="fab fa-twitter"></i>
-            </span>
-          </a>
-        </p>
-  
-      </div>
-    </footer>
+    <div class="content has-text-centered has-text-grey-light">
 
-  </body>
+      <p class="is-footer-element">
+        This website is licensed under a
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" class="button-animated-min">CC BY NC ND 4.0 International License</a>.
+      </p>
 
-  </html>
+      <p class="is-footer-element">
+        <a class="link button-animated-min" href="https://github.com/itsandreramon" style="padding-right: 1rem;" target="_blank">
+          <span class="icon is-small">
+            <i class="fab fa-github"></i>
+          </span>
+        </a>
+
+        <a class="link button-animated-min" href="https://twitter.com/itsandreramon" target="_blank">
+          <span class="icon is-small">
+            <i class="fab fa-twitter"></i>
+          </span>
+        </a>
+      </p>
+
+    </div>
+  </footer>
+
+</body>
+
+</html>
