--- a/src/html/about.html
+++ b/src/html/about.html
@@ -3,7 +3,7 @@
 <html class="has-navbar-fixed-top" lang="en">
 
 <head>
-  <title>André Thiele</title>
+  <title>About | André Thiele</title>
 
   <!-- Meta -->
   <meta charset="UTF-8">
