--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -3,7 +3,7 @@
 <html class="has-navbar-fixed-top" lang="en">
 
 <head>
-  <title>André Thiele</title>
+  <title>Contact | André Thiele</title>
 
   <!-- Meta -->
   <meta charset="UTF-8">
@@ -103,8 +103,7 @@
 
         <div class="contact-text has-text-centered">
           <p class="subtitle has-text-dark">
-            Simply fill out the form below to get in touch with me via email or, if you prefer, reach out to me on Twitter:
-            <a href="https://twitter.com/itsandreramon" class="button-animated-min">@itsandreramon</a>.
+            Simply fill out the form below to get in touch with me via email.
           </p>
         </div>
 
@@ -143,7 +142,7 @@
               <textarea class="textarea" name="message" placeholder="Message"></textarea>
 
               <p class="help is-dark">
-                This field is required
+                This field is required.
               </p>
             </div>
           </div>
