--- a/src/html/work.html
+++ b/src/html/work.html
@@ -3,7 +3,7 @@
 <html class="has-navbar-fixed-top" lang="en">
 
 <head>
-  <title>André Thiele</title>
+  <title>Work | André Thiele</title>
 
   <!-- Meta -->
   <meta charset="UTF-8">
@@ -108,7 +108,7 @@
             <div class="card">
               <div class="card-image">
                 <figure class="image is-4by3">
-                  <img src="https://i.imgur.com/vA1cn84.jpg" alt="Placeholder image">
+                  <img src="https://bulma.io/images/placeholders/640x480.png" alt="Placeholder image">
                 </figure>
               </div>
               <div class="card-content">
@@ -119,7 +119,7 @@
                 </div>
                 <div class="content">
                   <p class="subtitle has-text-left">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+                    I wrote several websites to date, with the latest addition of my personal website you are currently on.
                   </p>
                 </div>
               </div>
@@ -131,7 +131,7 @@
             <div class="card">
               <div class="card-image">
                 <figure class="image is-4by3">
-                  <img src="https://i.imgur.com/Oba79qP.jpg" alt="Placeholder image">
+                  <img src="https://bulma.io/images/placeholders/640x480.png" alt="Placeholder image">
                 </figure>
               </div>
               <div class="card-content">
@@ -142,7 +142,7 @@
                 </div>
                 <div class="content">
                   <p class="subtitle has-text-left">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+                    Java is the programming language I have the most experience in because my university is teaching it.
                   </p>
                 </div>
               </div>
@@ -154,7 +154,7 @@
             <div class="card" href="twitter.com">
               <div class="card-image">
                 <figure class="image is-4by3">
-                  <img src="https://i.imgur.com/myvpoHC.jpg" alt="Placeholder image">
+                  <img src="https://bulma.io/images/placeholders/640x480.png" alt="Placeholder image">
                 </figure>
               </div>
               <div class="card-content">
@@ -165,7 +165,7 @@
                 </div>
                 <div class="content">
                   <p class="subtitle has-text-left">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+                    I am maintaining a blog about Java where I explain principles people should know to start programming.
                   </p>
                 </div>
               </div>
