Adjust navbar and hamburger menu

--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -8,7 +8,7 @@
   <!-- Meta -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="theme-color" content="#1F1F1F"/>
+  <meta name="theme-color" content="#1F1F1F" />
 
   <!-- Stlyesheets -->
   <link rel="stylesheet" href="../../dist/css/styles.css">
@@ -43,19 +43,19 @@
 
   <!-- Navigation -->
   <div id="darkenbackground"></div>
-  <nav class="navbar is-light has-background-white is-fixed-top">
+  <nav class="navbar has-background-white is-fixed-top">
     <div class="navbar-brand">
-      <a class="navbar-item spaced-letters button-animated-min" href="index.html">
-        ANDRÉ THIELE
+      <a class="navbar-item button-animated-min brand-button" href="index.html">
+        André Ramon
       </a>
 
       <!-- When smaller than 1087px -->
       <div id="menuToggle">
         <input type="checkbox" onclick="fadeinbackground()" />
 
-        <span></span>
-        <span></span>
-        <span></span>
+        <span class="toggle"></span>
+        <span class="toggle"></span>
+        <span class="toggle"></span>
 
         <ul id="menu">
           <li>
@@ -69,6 +69,30 @@
           </li>
           <li>
             <a class="menuelement" href="contact.html">Contact</a>
+          </li>
+
+          <li>
+            <div class="menuline"></div>
+          </li>
+
+          <li>
+            <a class="menuelement" href="https://github.com/itsandreramon" style="margin-right: 2rem;" target="_blank">
+              <span class="icon is-small">
+                <i class="fab fa-github"></i>
+              </span>
+            </a>
+
+            <a class="menuelement" href="https://twitter.com/itsandreramon" style="margin-right: 2rem;" target="_blank">
+              <span class="icon is-small">
+                <i class="fab fa-twitter"></i>
+              </span>
+            </a>
+
+            <a class="menuelement" href="https://www.behance.net/itsandreramon" style="margin-right: 0.25rem;" target="_blank">
+              <span class="icon is-small">
+                <i class="fab fa-behance"></i>
+              </span>
+            </a>
           </li>
         </ul>
       </div>
@@ -89,6 +113,26 @@
         <a class="navbar-item button-animated" href="contact.html">
           Contact
         </a>
+
+        <p class="navbar-item" style="margin-left: 2rem; margin-right: 1.75rem; z-index: -1;">|</p>
+
+        <a class="navbar-item button-animated-min" style="margin-right: 1.75rem;" href="https://github.com/itsandreramon" target="_blank">
+          <span class="icon is-small">
+            <i class="fab fa-github"></i>
+          </span>
+        </a>
+
+        <a class="navbar-item button-animated-min" style="margin-right: 1.75rem;" href="https://twitter.com/itsandreramon" target="_blank">
+          <span class="icon is-small">
+            <i class="fab fa-twitter"></i>
+          </span>
+        </a>
+
+        <a class="navbar-item button-animated-min" style="padding-right: 0.25rem;" href="https://www.behance.net/itsandreramon" target="_blank">
+          <span class="icon is-small">
+            <i class="fab fa-behance"></i>
+          </span>
+        </a>
       </div>
     </div>
   </nav>
@@ -98,12 +142,12 @@
     <div class="hero-body fadeinbody">
       <div class="container">
         <div class="contact-heading has-text-centered">
-          <h1 class="title is-size-2 has-text-dark">Contact</h1>
+          <h1 class="title is-size-3 has-text-dark">Contact</h1>
         </div>
 
         <div class="contact-text has-text-centered">
           <p class="subtitle has-text-dark">
-            Simply fill out the form below to get in touch with me via email.
+            Simply fill out the form below to get in touch.
           </p>
         </div>
 
@@ -165,20 +209,6 @@
       <p class="is-footer-element">
         This website is licensed under a
         <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" class="button-animated-min">CC BY NC ND 4.0 International License</a>.
-      </p>
-
-      <p class="is-footer-element">
-        <a class="link button-animated-min" href="https://github.com/itsandreramon" style="padding-right: 1rem;" target="_blank">
-          <span class="icon is-small">
-            <i class="fab fa-github"></i>
-          </span>
-        </a>
-
-        <a class="link button-animated-min" href="https://twitter.com/itsandreramon" target="_blank">
-          <span class="icon is-small">
-            <i class="fab fa-twitter"></i>
-          </span>
-        </a>
       </p>
 
     </div>
